# ar-ghost

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
carrying_system/: carrying_system.ino
cmake/: arm-gnueabi.toolchain.cmake  host_projects.cmake  multiplatform_projects.cmake  target_projects.cmake  target_softfp_projects.cmake  unit_test_launcher.cmake
core/: CMakeLists.txt
core/include/core/: CarryingSystemAtCommandFactory.hpp  DestinationPointFlyer.hpp  EntryPoint.hpp  Mission.hpp  MissionParser.hpp  MissionStep.hpp  MissionStepDoNothing.hpp  MissionStepDroneAngularMovement.hpp  MissionStepDroneLand.hpp  MissionStepFactory.hpp  MissionStepSendCarryingSystemCommand.hpp  SerialCommunicator.hpp
core/src/: CarryingSystemAtCommandFactory.cpp  DestinationPointFlyer.cpp  EntryPoint.cpp  Main.cpp  Mission.cpp  MissionParser.cpp  MissionStep.cpp  MissionStepDoNothing.cpp  MissionStepDroneAngularMovement.cpp  MissionStepDroneLand.cpp  MissionStepFactory.cpp  MissionStepSendCarryingSystemCommand.cpp  SerialCommunicator.cpp
core/test/: CarryingSystemCommunicationTest.cpp
libDroneMovement/: CMakeLists.txt
libDroneMovement/include/libDroneMovement/: AtCommandFactory.hpp  AtCommandSender.hpp  Drone.hpp  NavDataParser.hpp  NavDataReceiver.hpp
libDroneMovement/src/: AtCommandFactory.cpp  AtCommandSender.cpp  Drone.cpp  NavDataParser.cpp  NavDataReceiver.cpp
libDroneMovement/test/: AtCommandFactoryUnitTest.cpp  NavDataParserUnitTest.cpp
libDroneVideo/: CMakeLists.txt
libDroneVideo/include/libDroneVideo/: CircleDetector.hpp  FrameGrabber.hpp  LineDetection.hpp  LineDetector.hpp
libDroneVideo/src/: FrameGrabber.cpp  LineDetection.cpp
libDroneVideo/test/: VideoTest.cpp
libDroneVideoSharing/: CMakeLists.txt
libDroneVideoSharing/include/libDroneVideoSharing/: CameraDefinition.hpp  FunctionHooker.hpp
libDroneVideoSharing/src/: VideoSysCallHook.cpp
libLineFollowing/: CMakeLists.txt  README.md
libLineFollowing/include/: CheckAngle.h  SystemDrone.h  SystemEmergency.h  SystemFlying.h  kcg_consts.h  kcg_sensors.h  kcg_types.h  macro_libmathext.h  user_macros.h
libLineFollowing/src/: CheckAngle.c  SystemDrone.c  SystemEmergency.c  SystemFlying.c  kcg_consts.c  kcg_types.c
libraries/Diode/: diode.cpp  diode.h
libraries/Interrupter/: interrupter.cpp  interrupter.h
libraries/Motor/: motor.cpp  motor.h
tools/drone/scripts/: droneChroot.sh  droneVideoShare.sh
tools/scripts/: envsetup.sh  send2Drone.sh
tools/uncrustify/: uncrustify.cfg
